--- a/style.css
+++ b/style.css
@@ -196,6 +196,7 @@ nav a {
     align-items: center;
     text-align: center;
     justify-content: space-evenly;
+    padding: 2em;
 }
 .ben h3,p {
     margin: 0;
